--- a/DynamicsObjects/DynamicObjects.csproj
+++ b/DynamicsObjects/DynamicObjects.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converter.cs" />
+    <Compile Include="ExpandoObjectSerializer.cs" />
     <Compile Include="DynamicTable.cs" />
     <Compile Include="DynamicTableColumn.cs" />
     <Compile Include="IDynamicTable.cs" />
